# VisualSortingAlgorithmsSFML

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Game.cpp.F4DF700329791C3E.idx  main.cpp.B137FDEA08FCFF20.idx
cmake_build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sortingAlgorithms
cmake_build_Debug/.cmake/api/v1/reply/: codemodel-v2-06f3d9042e0d6b80ad17.json  index-2023-07-08T17-25-24-0726.json  target-sortingAlgorithms-Debug-df273cf75c96bf3ee4fd.json
include/: Blocks.h  Game.h  Global.h  SortButton.h  Time.h
src/: Blocks.cpp  Game.cpp  SortButton.cpp  Time.cpp  main.cpp
